force-app/main/default/objects/maps__CalEventBaseObj__c/maps__CalEventBaseObj__c.object-meta.xml
<CustomObject>
    <label>Maps Calendar Event Base Object</label>
    <nameField>
        <label>Maps Calendar Event Base Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Calendar Event Base Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>