force-app/main/default/objects/maps__CalEventBaseObj__c/fields/maps__BaseObjectField__c.field-meta.xml
<CustomField>
    <fullName>maps__BaseObjectField__c</fullName>
    <label>Maps Base Object Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>