force-app/main/default/objects/maps__CalEventBaseObj__c/fields/maps__Enabled__c.field-meta.xml
<CustomField>
    <fullName>maps__Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>