force-app/main/default/objects/maps__CalEventBaseObj__c/fields/maps__EventObject__c.field-meta.xml
<CustomField>
    <fullName>maps__EventObject__c</fullName>
    <label>EventObject</label>
    <length>50</length>
    <type>Text</type>
</CustomField>