force-app/main/default/objects/maps__CalEventBaseObj__c/listViews/maps__All.listView-meta.xml
<ListView>
    <fullName>maps__All</fullName>
    <columns>NAME</columns>
    <columns>maps__Enabled__c</columns>
    <columns>maps__EventObject__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>